--- a/docs/style.css
+++ b/docs/style.css
@@ -15,6 +15,10 @@ body {
     background-attachment: fixed; /* A imagem de fundo fica fixa ao rolar a página */
 }
 
+h2 {
+    color: #d8000c;
+}
+
 .suggestions-button {
     text-align: center;
     margin-top: 20px;
